# bochen

./: .fuse_hidden00023c390000001d  .fuse_hidden00023c3a0000001c  .gitignore  CLAUDE.md  COUNTER.md  README.md  agent.py  db.py  harness.py  harness_jax.py  imagine_agent.py  notify.py  pyproject.toml  run.sh  ten.md
exp1_scientist/: agent.py  belief.py  config.py  prompts.py
exp2_worldmodel/: agent.py  collect.py  config.py  models.py  train.py
exp3_probe_solve/: agent.py  config.py  encoder.py  memory.py  probe.py  solver.py
jax_models/: __init__.py
jax_models/exp2_worldmodel/: agent.py  models.py  train.py
jax_models/exp3_probe_solve/: agent.py  memory.py
jax_models/exp3_probe_solve/checkpoints/: memory.pkl
shared/: env_wrapper.py  metrics.py  perception.py
specs/: JAXIFY.md
specs/2026-03-27/: hypothesis_v2.md  three.md
