[project]
name = "bochen"
version = "0.1.0"
description = "ARC-AGI-3 research harness"
requires-python = ">=3.11"
dependencies = [
    "arc-agi>=0.0.7",
    "numpy",
    "openai",
]

# NOTE: torch is provided by system site-packages (2.8.0+cu128)
# Create venv with: uv venv --system-site-packages
# Do NOT add torch to dependencies — the system torch matches
# this machine's NVIDIA driver (CUDA 12.4)
